--- a/vignettes/oobag.Rmd
+++ b/vignettes/oobag.Rmd
@@ -95,7 +95,7 @@ In some cases, you may want more control over how out-of-bag error is estimated.
 
 ```{r}
 
-oobag_fun_brier <- function(y_mat, w_vec, s_vec){
+oobag_brier_surv <- function(y_mat, w_vec, s_vec){
 
  # output is numeric vector of length 1
  as.numeric(
@@ -114,7 +114,7 @@ There are two ways to apply your own function to compute out-of-bag error. First
 
 ```{r}
 
-oobag_fun_brier(y_mat = pbc_orsf[,c('time', 'status')],
+oobag_brier_surv(y_mat = pbc_orsf[,c('time', 'status')],
                 s_vec = fit$pred_oobag)
 
 ```
@@ -128,7 +128,7 @@ fit <- orsf(data = pbc_orsf,
             n_tree = 20,
             tree_seeds = 2,
             oobag_pred_horizon = 2000,
-            oobag_fun = oobag_fun_brier,
+            oobag_fun = oobag_brier_surv,
             oobag_eval_every = 1)
 
 plot(
@@ -167,9 +167,9 @@ y_mat <- cbind(time = test_time, status = test_status)
 s_vec <- seq(0.9, 0.1, length.out = 100)
 
 # see 1 in the checklist above
-names(formals(oobag_fun_brier)) == c("y_mat", "w_vec", "s_vec")
+names(formals(oobag_brier_surv)) == c("y_mat", "w_vec", "s_vec")
 
-test_output <- oobag_fun_brier(y_mat = y_mat, 
+test_output <- oobag_brier_surv(y_mat = y_mat, 
                                w_vec = w_vec,
                                s_vec = s_vec)
 
